--- a/bbz-project/src/styles/RecordsListStyles.css
+++ b/bbz-project/src/styles/RecordsListStyles.css
@@ -23,6 +23,9 @@
     width: 100%;
     height: 10%;
     background-color: #61dafb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .recordsBck {
@@ -33,13 +36,43 @@
 }
 
 .sortOptions {
-    background-color: red;
+    background-color: white;
     width: 100%;
     height: 10%;
+    display: flex;
+    align-items: center;
+}
+
+.optionBck {
+    /*background-color: red;*/
+    height: 95%;
+    border-left: 1px solid #979797;
+    display: flex;
+    justify-content: center;
+}
+
+.optionBck:nth-child(1) {
+    border-left: 0;
+}
+
+#op1 {
+    width: 25%;
+}
+
+#op2 {
+    width: 10%;
+}
+
+#op3 {
+    width: 35%;
+}
+
+#op4 {
+    width: 25%;
 }
 
 .recordsField {
-    background-color: blue;
+    /*background-color: blue;*/
     width: 100%;
     height: 90%;
 }
