--- a/bbz-project/src/styles/sidebar-styles.css
+++ b/bbz-project/src/styles/sidebar-styles.css
@@ -1,11 +1,14 @@
 .sidebar {
-    background-color: white;
+    background-color: #f2f2f2;
     position: fixed;
     display: flex;
     flex-direction: column;
-    width: 360px;
+    width: 362px;
+    /* height is bugged, it needs fix */
+    height: 90%;
     left: -100%;
     transition-duration: 850ms;
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
 .sidebar.active {
@@ -13,17 +16,58 @@
     transition-duration: 350ms;
 }
 
-.navbar {
-    background-color: blueviolet;
-    flex-direction: row;
+.title {
+    font-size: 24px;
+    color: white;
+    margin-bottom: 20px;
+    margin-left: 10px;
 }
 
-.sidebar-item {
+.search-container {
+    height: 62px;
+    text-align: center;
     background-color: white;
 }
 
-.database-container {
-    background-color: #f2f2f2f2;
-    height: 100vh;
+.search-input {
+    margin-left: 22px;
+    margin-right: 22px;
+    margin-top: 10px;
+    margin-bottom: auto;
+}
+
+
+.navbar {
+    background-color: blueviolet;
+    height: 10%;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.list-item {
+    background-color: white;
+    margin-top: 10px;
+    font-size: 16px;
+    padding: 15px;
+}
+
+.database-container {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.universitet-logo {
+    background-color: #f2f2f2f2;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.footer {
+    width: 80%;
+    border: 1px solid #000000;
+    align-self: center;
 }
