--- a/bbz-project/src/styles/sidebar-styles.css
+++ b/bbz-project/src/styles/sidebar-styles.css
@@ -4,8 +4,8 @@
     display: flex;
     flex-direction: column;
     width: 362px;
+    height: 850px;
     /* height is bugged, it needs fix */
-    height: 90%;
     left: -100%;
     transition-duration: 850ms;
     box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.25);
@@ -29,7 +29,7 @@
 }
 
 .search-container {
-    height: 62px;
+    height: 4em;
     text-align: center;
     background-color: white;
 }
@@ -44,7 +44,7 @@
 
 .navbar {
     background-color: blueviolet;
-    height: 10%;
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -58,9 +58,14 @@
 }
 
 .database-container {
-    height: 80%;
     display: flex;
     flex-direction: column;
+}
+
+.uwrlogo-container {
+    display: flex;
+    flex-direction: column;
+    background-color: greenyellow;
 }
 
 .universitet-logo {
@@ -70,7 +75,7 @@
     margin-top: 10px;
 }
 
-.footer {
+.separator {
     width: 80%;
     border: 1px solid #000000;
     align-self: center;
