--- a/bbz-project/src/styles/main-window-styles.css
+++ b/bbz-project/src/styles/main-window-styles.css
@@ -1,9 +1,3 @@
-#mainWindowBck {
-    background-color: red;
-    height: 100vh;
-    overflow: hidden;
-}
-
 #mainWindowTopBarBck {
     background-color: green;
     height: 15%;
@@ -25,6 +19,12 @@
 }
 
 @media (max-width: 991px) {
+    #mainWindowBodyRightBck {
+        width: 100%;
+    }
+}
+
+@media (max-width: 575px) {
     #mainWindowTopBarBck {
         height: 10%;
     }
@@ -33,7 +33,10 @@
         height: 90%;
     }
 
-    #mainWindowBodyRightBck {
-        width: 100%;
+    #mainWindowBodyLeftBck {
+        position: absolute;
+        z-index: 2;
+        background-color: orangered;
+        width: 70%;
     }
 }
