--- a/bbz-project/src/styles/sidebar-styles.css
+++ b/bbz-project/src/styles/sidebar-styles.css
@@ -1,27 +1,31 @@
 .sidebar {
-    background-color: #f2f2f2;
     position: fixed;
     display: flex;
     flex-direction: column;
-    width: 362px;
-    height: 850px;
-    /* height is bugged, it needs fix */
+
+    width: 320px;
+    height: 815px;     /* height is bugged, it needs fix */
     left: -100%;
+
     transition-duration: 850ms;
+
+    background-color: #f2f2f2;
     box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
 .sidebar.active {
     left: 0;
+
     transition-duration: 350ms;
 }
 
 .title {
-    font-size: 24px;
-    color: white;
     margin-bottom: 20px;
     margin-left: 10px;
     align-self: flex-end;
+
+    font-size: 24px;
+    color: white;
 }
 
 .menu-button {
@@ -29,9 +33,11 @@
 }
 
 .search-container {
-    height: 4em;
-    text-align: center;
+    height: 8%;
+
     background-color: white;
+    border-bottom: solid #f2f2f2f2 2px;
+    text-align: center;
 }
 
 .search-input {
@@ -43,40 +49,51 @@
 
 
 .navbar {
-    background-color: blueviolet;
-    height: 100px;
+    height: 12%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
 
-.list-item {
-    background-color: white;
-    margin-top: 10px;
-    font-size: 16px;
-    padding: 15px;
+    background-color: blueviolet;
 }
 
 .database-container {
+    height: 78%;
     display: flex;
     flex-direction: column;
+
+    overflow-y: auto;
 }
 
+.list-item {
+    margin-top: 4px;
+    padding: 15px;
+
+    background-color: white;
+    font-size: 16px;
+    
+}
+
+
 .uwrlogo-container {
+    height: 18%;
     display: flex;
     flex-direction: column;
+
     background-color: greenyellow;
 }
 
 .universitet-logo {
-    background-color: #f2f2f2f2;
-    text-align: center;
     margin-bottom: 10px;
     margin-top: 10px;
+
+    background-color: #f2f2f2f2;
+    text-align: center;
 }
 
 .separator {
     width: 80%;
-    border: 1px solid #000000;
     align-self: center;
+
+    border: 1px solid #000000;
 }
