--- a/bbz-project/src/styles/records-list-manager-styles.css
+++ b/bbz-project/src/styles/records-list-manager-styles.css
@@ -1,36 +1,60 @@
-#recordsListManagerMainBck {
-    height: 100%;
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+#topPanel {
+    height: 9%;
 }
 
-#recordsListManagerHeaderBck {
-    width: 100%;
+#middlePanel {
+    height: 80%;
+}
+
+#bottomPanel {
     height: 10%;
-    border-bottom: 2px solid black;
-    display: flex;
-    flex-direction: row;
 }
 
-#recordsListManagerDatabaseBck {
-    width: 100%;
+#recordsBck {
+    background-color: #F3F3F3;
+    height: 98%;
+    box-shadow: 0 0 10px #B7B7B7;
+}
+
+#sortOptions {
+    background-color: white;
+    height: 10%;
+}
+
+.optionBck {
+    height: 95%;
+    border-left: 1px solid #979797;
+    display: flex;
+    justify-content: center;
+}
+
+.optionBck:nth-child(1) {
+    border-left: 0;
+}
+
+.recordsField {
     height: 90%;
 }
 
-#recordsListManagerAuthorBck {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    margin-left: 2%;
-    margin-right: 6%;
+#pageButtonBck {
+    width: 14vh;
+    height: 4.4vh;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 0 10px #B7B7B7;
 }
 
-#recordsListManagerTitleBck {
-    height: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    margin-right: 2%;
+.pageButton {
+    width: 7vh;
 }
+
+#rightPageButton {
+    border-left: 1px solid #979797;
+}
+
+#pageText {
+    position: absolute;
+    right: 2%;
+    top: 10px;
+}
+
