--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -20,22 +20,16 @@
 
 .recordFieldBck {
     padding-left: 1vw;
-    /*background-color: green;*/
     font-size: 1.6vh;
 }
 
 .recordOptionsBck {
     width: 5%;
-    /*background-color: yellow;*/
 }
 
-.sublistBck {
+.sublistGrayBck {
     position: absolute;
     top: 50%;
-    width: 98%;
-    background-color: red;
-    left: 50%;
-    padding-top: 3vh;
-    transform: translateX(-50%);
-    border-radius: 4px;
+    background-color: #E1E1E1;
+    padding: 3.5vh 0.5vw 1.5vh;
 }
