--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -19,12 +19,13 @@
 }
 
 .recordFieldBck {
-    padding-left: 1vw;
+    padding-left: 0.6vw;
     font-size: 1.6vh;
 }
 
 .recordOptionsBck {
-    width: 5%;
+    width: 13%;
+    background-color: yellow;
 }
 
 .sublistGrayBck {
