--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -1,13 +1,13 @@
 .recordMainBck {
     position: relative;
-    margin-bottom: 0.8vh;
+    margin-bottom: 0.5vh;
     background-color: #61dafb;
 }
 
 .recordBck {
     position: relative;
     background-color: white;
-    height: 5.5vh;
+    height: 5.2vh;
     transition: 250ms;
     z-index: 2;
 }
@@ -18,9 +18,16 @@
     transition: 250ms;
 }
 
+.recordBck:hover .recordOptionsBck {
+    display: flex;
+}
+
 .recordFieldBck {
-    padding-left: 0.6vw;
-    font-size: 1.6vh;
+    padding-left: 0.45vw;
+    padding-right: 0.2vw;
+    margin-right: 0.07vw;
+    font-size: 1.55vh;
+    line-height: 1.9vh;
 }
 
 .sublistGrayBck {
@@ -28,4 +35,14 @@
     top: 50%;
     background-color: #E1E1E1;
     padding: 3.5vh 0.5vw 1.5vh;
+}
+
+.recordOptionsBck {
+    right: 0;
+    width: 10%;
+    display: none;
+}
+
+.visibleOptions {
+    display: flex;
 }
