--- a/bbz-project/src/styles/sidebar-styles.css
+++ b/bbz-project/src/styles/sidebar-styles.css
@@ -1,10 +1,10 @@
 .sidebar {
-    position: fixed;
+    position: relative;
     display: flex;
     flex-direction: column;
 
-    width: 320px;
-    height: 815px;     /* height is bugged, it needs fix */
+    width: 100%;
+    height: 100%;     /* height is bugged, it needs fix */
     left: -100%;
 
     transition-duration: 850ms;
@@ -33,7 +33,7 @@
 }
 
 .search-container {
-    height: 8%;
+    height: 62px;
 
     background-color: white;
     border-bottom: solid #f2f2f2f2 2px;
@@ -49,7 +49,7 @@
 
 
 .navbar {
-    height: 12%;
+    height: 92px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -76,23 +76,29 @@
 
 
 .uwrlogo-container {
-    height: 18%;
+    height: 120px;
     display: flex;
     flex-direction: column;
-
-    background-color: greenyellow;
 }
 
 .universitet-logo {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     margin-top: 10px;
 
     background-color: #f2f2f2f2;
     text-align: center;
 }
 
+.logo-img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    max-height: 100px;
+}
+
 .separator {
     width: 80%;
+    margin-top: 5px;
     align-self: center;
 
     border: 1px solid #000000;
