--- a/bbz-project/src/styles/app-base-styles.css
+++ b/bbz-project/src/styles/app-base-styles.css
@@ -1,18 +1,33 @@
+#appBaseBck {
+    padding-top: 125px;
+    min-height: 750px;
+}
+
 #appBaseTopBarBck {
     background-color: green;
-    height: 15%;
+    height: 125px;
+    top: 0;
+    z-index: 5;
 }
 
 #appBaseMainBodyBck {
-    height: 85%;
+    height: 100%;
 }
 
 #appBaseBodyLeftBck {
     background-color: orangered;
-    width: 18%;
+    width: 270px;
 }
 
 #appBaseBodyRightBck {
     background-color: white;
-    width: 82%;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (max-width: 991px) {
+    #appBaseBodyRightBck {
+        width: 100%;
+    }
 }
