Record and sublist corrections.

--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -1,13 +1,13 @@
 .recordMainBck {
     position: relative;
-    margin-bottom: 0.5vh;
+    margin-bottom: 6px;
     background-color: #61dafb;
 }
 
 .recordBck {
     position: relative;
     background-color: white;
-    height: 5.2vh;
+    height: 46px;
     transition: 250ms;
     z-index: 2;
 }
@@ -23,18 +23,18 @@
 }
 
 .recordFieldBck {
-    padding-left: 0.45vw;
-    padding-right: 0.2vw;
+    padding-left: 0.48vw;
+    padding-right: 0.3vw;
     margin-right: 0.07vw;
-    font-size: 1.55vh;
-    line-height: 1.9vh;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 .sublistGrayBck {
     position: absolute;
     top: 50%;
     background-color: #E1E1E1;
-    padding: 3.5vh 0.5vw 1.5vh;
+    padding: 32px 0.5vw 15px;
 }
 
 .recordOptionsBck {
