--- a/bbz-project/src/styles/sublist-styles.css
+++ b/bbz-project/src/styles/sublist-styles.css
@@ -5,7 +5,7 @@
 
 .sublistTopBarBck {
     background-color: white;
-    height: 3.5vh;
+    height: 35px;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 }
@@ -14,5 +14,5 @@
     padding-left: 0.5vw;
     height: 75%;
     border-right: 1px solid #979797;
-    font-size: 1.4vh;
+    font-size: 12px;
 }
