Some styles/anim corrections and repair key error inside map functions.

--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -26,8 +26,8 @@
 }
 
 .recordFieldBck {
-    padding-left: 0.48vw;
-    padding-right: 0.3vw;
+    padding-left: 6px;
+    padding-right: 5px;
     margin-right: 0.07vw;
     font-size: 14px;
     line-height: 18px;
