--- a/bbz-project/src/styles/sublist-styles.css
+++ b/bbz-project/src/styles/sublist-styles.css
@@ -3,16 +3,33 @@
     border-radius: 6px;
 }
 
-.sublistTopBarBck {
-    background-color: white;
-    height: 35px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+.sublistTable {
+    border-radius: 6px;
+    font-size: 13px;
+}
+.sublistTable > tr:last-child > th {
+    border: 0;
+    border-bottom-left-radius: 6px;
 }
 
-.sublistTopBarKey {
-    padding-left: 0.5vw;
-    height: 75%;
-    border-right: 1px solid #979797;
-    font-size: 12px;
+.sublistTable > tr:first-child > th {
+    border-top-left-radius: 6px;
+}
+
+.sublistKey {
+    background-color: white;
+    width: 100px;
+    font-weight: 500;
+    text-align: center;
+    border-bottom: 1px solid #E1E1E1;
+    padding: 0 0.6vw;
+}
+
+.sublistVal {
+    padding: 0 0.6vw;
+    border-bottom: 1px solid #E1E1E1;
+}
+
+.sublistTable > tr:last-child > td {
+    border: 0;
 }
