--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -1,4 +1,6 @@
 .recordMainBck {
+    background-color: #E1E1E1;
+    height: 400px;
     position: relative;
     margin-bottom: 6px;
 }
@@ -34,10 +36,10 @@
 }
 
 .sublistGrayBck {
+    height: 90%;
     position: absolute;
-    top: 50%;
     background-color: #E1E1E1;
-    padding: 32px 0.5vw 15px;
+    padding: 10px 0.5vw 10px;
 }
 
 .recordOptionsBck {
