--- a/bbz-project/src/styles/app-base-styles.css
+++ b/bbz-project/src/styles/app-base-styles.css
@@ -11,18 +11,18 @@
     background-color: green;
     height: 125px;
     top: 0;
-    z-index: 6;
+    z-index: 0;
 }
 
 #appBaseBodyLeftBck {
     left: 0;
     width: 270px;
-    z-index: 5;
 }
 
 #appBaseBodyRightBck {
     margin-right: auto;
     margin-left: auto;
+    background-color: white;
 }
 
 #appBaseBlackBck {
