Top bar buttons with basic dropdown item.

--- a/bbz-project/src/styles/app-base-styles.css
+++ b/bbz-project/src/styles/app-base-styles.css
@@ -1,3 +1,12 @@
+#topBarImgBck {
+    height: 125px;
+}
+
+#topBarImg {
+    transform: translate(-1.4%, -26.5%);
+    z-index: 0;
+}
+
 #appBaseBck {
     padding-top: 125px;
     min-height: 750px;
@@ -8,21 +17,20 @@
 }
 
 #appBaseTopBarBck {
-    background-color: green;
+    background-color: transparent;
     height: 125px;
     top: 0;
-    z-index: 0;
 }
 
 #appBaseBodyLeftBck {
     left: 0;
     width: 270px;
+    z-index: 5;
 }
 
 #appBaseBodyRightBck {
     margin-right: auto;
     margin-left: auto;
-    background-color: white;
 }
 
 #appBaseBlackBck {
