--- a/bbz-project/src/styles/top-bar-styles.css
+++ b/bbz-project/src/styles/top-bar-styles.css
@@ -1,5 +1,25 @@
-#topBarImg {
+#topBarContentBck {
     position: absolute;
-    top: -228%;
-    left: -1.5%;
+    /*background-color: #61dafb;*/
+    z-index: 4;
+}
+
+#topBarBodyBck {
+    /*background-color: #f2f2f2;*/
+    display: flex;
+    flex-direction: row;
+}
+
+#topBarBodyLeftBck {
+    /*background-color: aqua;*/
+}
+
+#topBarBodyRightBck {
+    display: flex;
+    align-items: center;
+    background-color: blueviolet;
+}
+
+#topBarBodyRightHelper {
+    background-color: #61dafb;
 }
