--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -1,6 +1,7 @@
 .recordMainBck {
     background-color: #E1E1E1;
     height: 400px;
+    z-index: 0;
     position: relative;
     margin-bottom: 6px;
 }
