--- a/bbz-project/src/styles/top-bar-styles.css
+++ b/bbz-project/src/styles/top-bar-styles.css
@@ -1,44 +1,44 @@
+#topBarImg {
+    transform: translate(-1.4%, -26.5%);
+}
+
 #topBarBlackEffect {
     opacity: 0.2;
     background-color: black;
 }
 
-#topBarContentBck {
-    position: absolute;
-    z-index: 4;
-}
-
 #topBarBodyBck {
-    display: flex;
-    flex-direction: row;
+    position: relative;
+    padding-left: 710px;
 }
 
 #topBarBodyLeftBck {
-    position: relative;
+    left: 0;
     color: white;
+    width: 710px;
     font-size: 23px;
     font-weight: bold;
+    display: flex;
 }
 
 #topBarBodyLeftBck img {
-    position: absolute;
     transform: scale(0.520);
     left: 2.5%;
     top: -44%;
 }
 
 #topBarBodyLeftText {
-    transform: translateX(-10%);
+    transform: translateX(15%);
 }
 
 #topBarBodyRightBck {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    min-height: 100%;
+    justify-content: flex-end;
 }
 
 #topBarBodyRightHelper {
-    max-width: 865px;
+    width: 100%;
+    max-width: 906px;
 }
 
 #topBarLang {
@@ -55,4 +55,56 @@
     cursor: pointer;
     color: #4CF7EA;
     transition: 0.4s;
+}
+
+.topBarIcon {
+    top: 12px;
+    right: 1%;
+}
+
+.topBarIcon:hover {
+    cursor: pointer;
+}
+
+@media (max-width: 1038px) {
+    #topBarBodyBck {
+        position: static;
+    }
+
+    #topBarBodyRightBck {
+        left: 0;
+        right: 0;
+        top: 0;
+        background-color: #0F7699;
+        padding-top: 70px;
+        padding-bottom: 16px;
+        justify-content: center;
+    }
+
+    #topBarBodyRightHelper {
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #topBarBodyLeftBck {
+        left: 0;
+        color: white;
+        max-width: 710px;
+        width: 90%;
+        display: block;
+        padding-top: 12px;
+    }
+
+    #topBarBodyLeftBck img {
+        transform: scale(0.300);
+        left: -54px;
+        top: -56%;
+    }
+
+    #topBarBodyLeftText {
+        width: 80%;
+        transform: translateX(90px);
+    }
 }
