--- a/bbz-project/src/styles/record-styles.css
+++ b/bbz-project/src/styles/record-styles.css
@@ -28,7 +28,10 @@
 }
 
 .recordFieldBck {
-    display: flex;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
     padding-left: 6px;
     padding-right: 5px;
     margin-right: 0.07vw;
