moved title 'Bibliografie Tematyczne' from sidebar to topbar, changed some static texts, removed 'add record' button, fixed bug some components were not returning to default state after changing data base, changed separator color from black to grey

--- a/bbz-project/src/styles/main-window-styles.css
+++ b/bbz-project/src/styles/main-window-styles.css
@@ -4,7 +4,7 @@
 
 #mainWindowHeaderBck {
     height: 8%;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #D3D3D3;
 }
 
 #mainWindowDatabaseBck {
