--- a/bbz-project/src/styles/sidebar-styles.css
+++ b/bbz-project/src/styles/sidebar-styles.css
@@ -61,7 +61,8 @@
     height: 78%;
     display: flex;
     flex-direction: column;
-
+    scrollbar-color: #C4C4C4 #F3F3F3;
+    scrollbar-width: thin;
     overflow-y: auto;
 }
 
