--- a/bbz-project/src/styles/records-list-manager-styles.css
+++ b/bbz-project/src/styles/records-list-manager-styles.css
@@ -48,7 +48,7 @@
 }
 
 #key1 {
-    width: 5%;
+    width: 4em;
 }
 
 #key2 {
@@ -74,7 +74,7 @@
 
 @media (max-width: 1300px) {
     #key1 {
-        width: 8%;
+        width: 4em;
     }
 
     #key2 {
