--- a/bbz-project/src/styles/records-list-manager-styles.css
+++ b/bbz-project/src/styles/records-list-manager-styles.css
@@ -7,10 +7,6 @@
     margin-bottom: 10px;
 }
 
-#bottomPanel {
-    height: 7%;
-}
-
 #recordsBck {
     background-color: #F3F3F3;
     height: 98%;
@@ -51,26 +47,8 @@
     border-radius: 6px;
 }
 
-#pageButtonBck {
-    width: 150px;
-    height: 35px;
-    border-radius: 5px;
-    background-color: white;
-    box-shadow: 0 0 10px #B7B7B7;
-}
-
-#rightPageButton {
-    border-left: 1px solid #979797;
-}
-
-#pageText {
-    position: absolute;
-    right: 2%;
-    top: 10px;
-}
-
 #key1 {
-    width: 5%;
+    width: 4em;
 }
 
 #key2 {
@@ -78,7 +56,7 @@
 }
 
 #key3 {
-    width: 27%;
+    width: 30%;
 }
 
 #key4 {
@@ -96,7 +74,7 @@
 
 @media (max-width: 1300px) {
     #key1 {
-        width: 8%;
+        width: 4em;
     }
 
     #key2 {
@@ -104,7 +82,7 @@
     }
 
     #key3 {
-        width: 27%;
+        width: 30%;
     }
 
     #key4 {
